After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671910 - geometrictransform: do not free freed pointers
geometrictransform: do not free freed pointers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-12 15:00 UTC by Oleksij Rempel
Modified: 2012-03-12 23:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch v1 (1.22 KB, patch)
2012-03-12 15:00 UTC, Oleksij Rempel
committed Details | Review

Description Oleksij Rempel 2012-03-12 15:00:52 UTC
Created attachment 209490 [details] [review]
patch v1

current cheese can create situation where gt->map is freed twice.
This patch set map to null to avoid it.

But this patch uncovers other bug, where i do not know proper solution.
in function gst_geometric_transform_transform()
i trigger this assertion g_return_val_if_fail (gt->map, GST_FLOW_ERROR);
Comment 1 Oleksij Rempel 2012-03-12 15:12:46 UTC
i did some more tests... suddenly currently i do not know how to reproduce this assertion. 

So this patch fixes at least this crash:

*** glibc detected *** /home/lex/tmp/work/cheese/.libs/lt-cheese: free(): invalid pointer: 0x00007f0b414d7cd0 ***
======= Backtrace: =========
/lib/x86_64-linux-gnu/libc.so.6(+0x7c8b6)[0x7f0b674858b6]
/usr/lib/x86_64-linux-gnu/gstreamer-0.10/libgstgeometrictransform.so(+0x1e30)[0x7f0b44aa3e30]
/usr/lib/x86_64-linux-gnu/libgstbase-0.10.so.0(+0x2f23a)[0x7f0b6265023a]
/usr/lib/x86_64-linux-gnu/libgstbase-0.10.so.0(+0x2f340)[0x7f0b62650340]
/usr/lib/x86_64-linux-gnu/libgstreamer-0.10.so.0(gst_pad_activate_push+0x163)[0x7f0b699e2b23]
Comment 2 Tim-Philipp Müller 2012-03-12 23:57:55 UTC
commit 4e7edb2778f85a5475ffe9c782c91d86a7b902ca
Author: Oleksij Rempel (Alexey Fisher) <bug-track@fisher-privat.net>
Date:   Mon Mar 12 15:42:04 2012 +0100

    geometrictransform: make sure gt->map not freed twice
    
    current cheese can create situation where gt->map is freed twice.
    This patch set map to null to avoid it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=671910